@@ -1,4 +1,4 @@
 #define RUBY_VERSION "1.6.4"
-#define RUBY_RELEASE_DATE "2001-06-19"
+#define RUBY_RELEASE_DATE "2001-06-22"
 #define RUBY_VERSION_CODE 164
-#define RUBY_RELEASE_CODE 20010619
+#define RUBY_RELEASE_CODE 20010622
