@@ -1,3 +1,9 @@
+Fri Jun 22 17:12:23 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>
+
+	* st.c (new_size): prime hash size enabled.
+
+	* ext/socket/socket.c (Init_socket): SO_* constants added.
+
 Tue Jun 19 22:24:07 2001  WATANABE Hirofumi  <eban@ruby-lang.org>
 
 	* gc.c (rb_setjmp): avoid GCC 3.0 warnings.
